--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" id="initial-screen">
-        <h1>Meu Amor, você Perdoar?</h1>
+        <h1>Meu Amor, você Perdoaria?</h1>
         <div class="buttons">
             <button id="yes-button">Sim, claro! 💖</button>
             <button id="no-button">Não, desculpe 😢</button>
